--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="refresh" content="10">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title># Ritik's website</title>
   </head>
   <body>
